--- a/NoirEtBlanc/css/nb.css
+++ b/NoirEtBlanc/css/nb.css
@@ -7,23 +7,36 @@ body {
     position: absolute;
     left: -15000px;
 }
-main h1 {
-    color: red;
-    text-align: right;
-}
+
 #mainHeader, #mainFooter{
     background-color: red;
 }
 #mainHeader > h1 {
     color: brown;
     font-family: Cantarell, Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14pt;
+    font-weight: normal;
+    font-style: italic;
 }
 #mainNav a{
     color: white;
+    text-decoration: none;
 }
 #mainNav a:hover{
     color: brown;
 }
+#leftCol h1 {
+    color: red;
+    text-align: right;
+    letter-spacing: .1em;
+}
+#leftCol p {
+    line-height: 1.3;
+}
 aside h1{
     color: green;
+}
+
+#mainFooter {
+    text-align: center;
 }
