--- a/NoirEtBlanc/css/nb.css
+++ b/NoirEtBlanc/css/nb.css
@@ -1,7 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Cantarell|Raleway&display=swap');
 
+:root {
+    --black: #333333;
+    --red: #C1272D;
+    --shaded-red: #DF9595;
+    --green: #00751F;
+    --white: #FFFFFF;
+    --tWhite: rgba(255, 255, 255, 0.8);
+}
+
 body {
     font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--black);
+    font-size: 14pt;
 }
 .accessibility {
     position: absolute;
@@ -9,24 +20,24 @@ body {
 }
 
 #mainHeader, #mainFooter{
-    background-color: red;
+    background-color: var(--red);
 }
 #mainHeader > h1 {
-    color: brown;
+    color: var(--white);
     font-family: Cantarell, Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14pt;
+    font-size: 1.3em;
     font-weight: normal;
     font-style: italic;
 }
 #mainNav a{
-    color: white;
+    color: var(--white);
     text-decoration: none;
 }
 #mainNav a:hover{
-    color: brown;
+    color: var(--shaded-red);
 }
 #leftCol h1 {
-    color: red;
+    color: var(--green);
     text-align: right;
     letter-spacing: .1em;
 }
