--- a/NoirEtBlanc/css/nb.css
+++ b/NoirEtBlanc/css/nb.css
@@ -36,6 +36,11 @@ body {
 #mainNav a:hover{
     color: var(--shaded-red);
 }
+
+#pageContent {
+    background: url(/images/image-1.jpg) center center / cover no-repeat fixed;
+}
+
 #leftCol h1 {
     color: var(--green);
     text-align: right;
